@@ -12,7 +12,6 @@
   padding: 0 4px;
   font-size: 9pt;
   font-family: monospace;
-  border: 1px solid #999;
 }
 
 .googie_edit_layer span {
